--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
               class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
           </div>
 
-          <h3 class="text-xl font-bold mb-4">تصميم الحروف المضيئة والبارزة</h3>
+          <h2 class="text-xl font-bold mb-4">تصميم اللوحات والحروف البارزة والمضيئة </h2>
           <p class="text-gray-600 mb-6">
             نوفر خدمات متخصصة في تصميم وتنفيذ الحروف المضيئة والبارزة بجودة عالية ولمسة عصرية،
             تمنح علامتك التجارية حضوراً مميزاً سواء للمحلات التجارية أو الشركات أو المعارض.
@@ -370,7 +370,7 @@
           </div>
 
           <!-- العنوان -->
-          <h3 class="text-xl font-bold mb-4">تصميم وتنفيذ الأسوار والسواتر الإعلانية</h3>
+          <h2 class="text-xl font-bold mb-4">تصميم وتنفيذ الأسوار والسواتر الإعلانية</h2>
 
           <!-- الوصف -->
           <p class="text-gray-600 mb-6">
@@ -408,7 +408,7 @@
           </div>
 
           <!-- العنوان -->
-          <h3 class="text-xl font-bold mb-4">تصميم وتنفيذ واجهات كلادينج</h3>
+          <h2 class="text-xl font-bold mb-4">تصميم وتنفيذ واجهات كلادينج</h2>
 
           <!-- الوصف -->
           <p class="text-gray-600 mb-6">
@@ -442,7 +442,7 @@
           </div>
 
           <!-- العنوان -->
-          <h3 class="text-xl font-bold mb-4">طباعة البنرات والفليكس والفينيل</h3>
+          <h2 class="text-xl font-bold mb-4">طباعة البنرات والفليكس والفينيل</h2>
 
           <!-- الوصف -->
           <p class="text-gray-600 mb-6">
@@ -477,7 +477,7 @@
           </div>
 
           <!-- العنوان -->
-          <h3 class="text-xl font-bold mb-4">تصميم وتنفيذ اللوحات الإعلانية المضيئة</h3>
+          <h2 class="text-xl font-bold mb-4">تصميم وتنفيذ لوحات النيون المضيئة</h2>
 
           <!-- الوصف -->
           <p class="text-gray-600 mb-6">
@@ -695,28 +695,28 @@
       <div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8">
 
         <!-- Card 1 -->
-        <div
-          class="group relative overflow-hidden rounded-2xl shadow-lg transform transition-all duration-500 hover:scale-105 hover:shadow-2xl">
-          <img src="./assets/img/Logo-design.jpg" alt="تصميم لوجو"
-            class="w-full h-64 object-cover transition-all duration-500 group-hover:scale-110 ">
-          <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-500"></div>
-          <!-- Overlay with subtle blur effect -->
-          <div class="absolute inset-0 bg-black/0 group-hover:bg-black/20 backdrop-blur-0 group-hover:backdrop-blur-sm 
-                    transition-all duration-500 flex items-center justify-center p-6">
-            <div class="text-center transform translate-y-8 group-hover:translate-y-0 opacity-0 group-hover:opacity-100 
-                      transition-all duration-500 delay-200">
-              <h3 class="text-2xl text-white font-bold mb-3 drop-shadow-lg">
-                تصميم لوجو
-              </h3>
-              <p class="text-sm text-white font-bold leading-relaxed drop-shadow-md">
-                ابتكار هويات بصرية مميزة تعكس شخصية العلامة التجارية بأسلوب احترافي وإبداعي
-              </p>
-              <div class="mt-4">
+<div class="relative overflow-hidden rounded-2xl shadow-lg transform transition-all duration-500 hover:scale-105 hover:shadow-2xl">
+  <!-- الصورة -->
+  <img src="./assets/img/Logo-design.jpg" alt="تصميم لوجو"
+    class="w-full h-64 object-cover transition-all duration-500">
 
-              </div>
-            </div>
-          </div>
-        </div>
+  <!-- التعتيم ثابت -->
+  <div class="absolute inset-0 bg-black/50"></div>
+
+  <!-- الضبابية ثابتة -->
+  <div class="absolute inset-0 bg-black/20 backdrop-blur-sm flex items-center justify-center p-6 transition-all duration-500">
+    <div class="text-center transform translate-y-0 opacity-100 transition-all duration-500">
+      <h3 class="text-2xl text-white font-bold mb-3 drop-shadow-lg">
+        تصميم لوجو
+      </h3>
+      <p class="text-sm text-white font-bold leading-relaxed drop-shadow-md">
+        ابتكار هويات بصرية مميزة تعكس شخصية العلامة التجارية بأسلوب احترافي وإبداعي
+      </p>
+    </div>
+  </div>
+</div>
+
+
 
         <!-- Card 2 -->
         <div
@@ -1012,12 +1012,46 @@
 
     </div>
 
-    <!-- صورة توضيحية -->
-    <div class="relative mt-20 flex justify-center animate-fadeInUp">
-      <img src="./assets/img/ايجيبت للدعاية والاعلان 1.png " alt="أهمية الدعاية والإعلان" class="max-w-3xl rounded-2xl shadow-xl p-4 transform transition-transform duration-500 hover:scale-110">
-      <div class="absolute -top-10 -left-10 w-40 h-40 bg-primary-200 rounded-full mix-blend-multiply animate-pulse"></div>
-      <div class="absolute -bottom-10 -right-10 w-40 h-40 bg-primary-100 rounded-full mix-blend-multiply animate-pulse"></div>
-    </div>
+   
+  <div class="relative mt-20 flex flex-col md:flex-row items-center justify-between max-w-5xl mx-auto p-8 bg-white rounded-2xl shadow-xl animate-fadeInUp">
+  <!-- info -->
+  <div class="md:w-1/2 text-start md:text-start space-y-4">
+    <h2 class="text-3xl font-bold text-gray-800">
+      الدعاية والإعلان: طريقك لبناء علامة تجارية لا تُنسى
+    </h2>
+    <p class="text-gray-600 leading-relaxed">
+      الدعاية والإعلان مش مجرد وسيلة للعرض، لكنها استثمار حقيقي بينقلك من المنافسة العادية إلى 
+      <span class="font-semibold" style="color:#0e8779;">صدارة السوق</span>.  
+      من خلال خطة تسويقية ذكية، تقدر:
+    </p>
+    <ul class="list-disc list-inside text-gray-700 space-y-2">
+      <li>تعرّف جمهورك بمنتجاتك أو خدماتك بأسلوب مؤثر.</li>
+      <li>تخلق علاقة ثقة وولاء بينك وبين عملاءك.</li>
+      <li>تميز علامتك التجارية عن المنافسين وتخليها راسخة في الأذهان.</li>
+    </ul>
+    <p class="text-gray-600 leading-relaxed">
+      <span class="font-semibold" style="color:#0e8779;">النجاح</span> يبدأ برسالة واضحة، وإعلان قوي يوصلها صح.
+    </p>
+    <a href="tel:+966501234567"
+      class="inline-block mt-4 px-6 py-3 text-white rounded-lg shadow-lg transition duration-300"
+      style="background-color:#0e8779;">
+      ابدأ حملتك الآن
+    </a>
+  </div>
+
+  
+  <div class="relative md:w-1/2 mt-8 md:mt-0 flex justify-center">
+  
+
+   
+    <div class="relative rounded-full w-56 h-56 flex items-center justify-center shadow-xl"
+     style="background: linear-gradient(135deg, rgba(14,135,121,0.15), rgba(14,135,121,0.3));">
+  <img src="./assets/img/ايجيبت للدعاية والاعلان 1.png" alt="لوجو الشركة" class="w-24 h-24 object-contain">
+</div>
+
+  </div>
+</div>
+
 
   </div>
 </section>
@@ -1049,7 +1083,7 @@
         <div class="flex items-center space-x-reverse space-x-3 mb-6">
           <div
             class=" text-white p-3 rounded-lg w-14 h-14 flex items-center justify-center shadow-md rounded-full border-white border-2 bg-white">
-            <img src="./assets/img/ايجبتللدعاية والاعلان 1.png" alt="">
+            <img src="./assets/img/ايجيبت للدعاية والاعلان 1.png" alt="">
           </div>
           <div>
             <h3 class="text-xl font-bold">ايجبت للدعاية والإعلان</h3>
