change about section

--- a/index.html
+++ b/index.html
@@ -187,6 +187,25 @@
         </div>
       </div>
     </div>
+    <!-- Slide 1 -->
+<!-- <div class="hero-slide slide-1 absolute inset-0 flex items-center justify-center transition-opacity duration-1000"
+     style="background-image: url('./assets/img/hero-1.png');">
+  <div class="hero-overlay"></div>
+  <div class="hero-content text-center text-white px-4">
+    <div class="fade-in">
+      <h1 class="text-5xl lg:text-7xl font-bold mb-6">إبداع لا حدود له</h1>
+      <p class="text-xl lg:text-2xl mb-8 max-w-3xl mx-auto">
+        نحول أفكارك إلى حملات إعلانية مؤثرة تحقق النجاح والانتشار
+      </p>
+      <a href="tel:+966501234567">
+        <button class="bg-white text-blue-600 px-8 py-4 rounded-full font-bold text-lg hover:bg-gray-100 transition-colors">
+          ابدأ مشروعك
+        </button>
+      </a>
+    </div>
+  </div>
+</div> -->
+
 
     <!-- Slide 2 -->
     <div
@@ -262,92 +281,85 @@
 <div class="container w-75 m-auto">
 
   <!-- About Section -->
-  <section id="about" class="py-20 bg-gradient-to-b from-white via-gray-50 to-gray-100">
-    <div class="container mx-auto px-4">
-      <!-- Section Header -->
-      <div class="text-center mb-16">
-        <h2 class="text-4xl md:text-5xl font-bold text-gray-800 mb-6">
-          من <span class="bg-gradient-to-r from-primary to-primary-dark bg-clip-text text-transparent">نحن؟</span>
-        </h2>
-        <div class="w-24 h-1 bg-gradient-to-r from-primary to-primary-dark mx-auto mb-6 rounded-full"></div>
-        <p class="text-xl text-gray-600 max-w-3xl mx-auto leading-relaxed">
-  نحن شركة <span class="font-bold text-gray-800">ايجبت للإعلان والدعاية في جدة</span>، 
- 
-   نساعد عملاءنا على الوصول إلى جمهورهم والظهور بمظهر يليق بهم بافضل الطرق الإبداعية.
-</p>
+<section id="about" class="py-20 bg-gradient-to-b from-white via-gray-50 to-gray-100" aria-labelledby="about-title">
+  <div class="container mx-auto px-4">
+    
+    <!-- Section Header -->
+    <header class="text-center mb-16">
+      <h2 id="about-title" class="text-4xl md:text-5xl font-bold text-gray-800 mb-6">
+        من <span class="bg-gradient-to-r from-primary to-primary-dark bg-clip-text text-transparent">نحن؟</span>
+      </h2>
+      <div class="w-24 h-1 bg-gradient-to-r from-primary to-primary-dark mx-auto mb-6 rounded-full"></div>
+      <p class="text-xl text-gray-600 max-w-3xl mx-auto leading-relaxed">
+        نحن <strong class="font-bold text-gray-800">شركة ايجبت للإعلان والدعاية في جدة</strong>، 
+        نساعد عملاءنا على الوصول إلى جمهورهم المستهدف والظهور بمظهر احترافي عبر أفضل الطرق الإبداعية في التسويق والإعلان.
+      </p>
+    </header>
 
-      </div>
-
-      <div class="grid lg:grid-cols-2 gap-16 items-center">
-        <!-- Content -->
-        <div class="space-y-8">
-<div class="prose prose-lg text-gray-700 leading-relaxed">
-  <p class="text-lg mb-6">
-    في <strong class="text-primary">ايجبت للدعاية والإعلان</strong>، نؤمن أن النجاح يبدأ من الإبداع 
-    وينمو مع الاستراتيجية. نحن لسنا مجرد شركة دعائية، بل شريك حقيقي لعملائنا في رحلتهم نحو التميز.
-  </p>
-
-  <p class="text-lg mb-6">
-    بفضل خبرتنا العميقة وفريقنا المبدع، أصبحنا من افضل شركات الإعلان في جدة، حيث نجحنا في بناء سمعة 
-    قوية قائمة على الثقة والجودة والابتكار.
-  </p>
-
-  <p class="text-lg mb-6">
-    نحن نتميز بشكل خاص في مجال <strong class="text-primary">الدعاية والإعلان والتسويق الإلكتروني</strong>، حيث ندمج 
-    بين التقنيات الحديثة وفهمنا العميق لسلوك الجمهور، لنصنع استراتيجيات مؤثرة تحقق نتائج ملموسة 
-    وتضع عملاءنا في صدارة المنافسة.
-  </p>
-
-  <!-- النص الجديد -->
-  <p class="text-lg mb-6">
-    نقدم حلولاً متكاملة تبدأ من تصميم الهوية البصرية، وكتابة المحتوى الإبداعي، وصولاً إلى إدارة الحملات الإعلانية 
-    على مختلف المنصات الرقمية مثل <strong class="text-primary">فيسبوك</strong>، <strong class="text-primary">إنستجرام</strong>، و<strong class="text-primary">جوجل</strong>. 
-    هدفنا هو مساعدتك في الوصول إلى جمهورك المستهدف بأفضل الطرق وأكثرها تأثيرًا، مع تحقيق 
-    <span class="font-semibold text-primary">أعلى عائد استثماري</span> لحملاتك.
-  </p>
-
-  <p class="text-lg">
-    في عالم سريع التغير، نحن شريكك الذي يضمن لك التواجد القوي والفعّال، 
-    لنساعد علامتك التجارية على الظهور بمظهر يليق بها ويحقق أهدافك التسويقية.
-  </p>
-</div>
-
-
+    <div class="grid lg:grid-cols-2 gap-16 items-center">
       
+      <!-- Text Content -->
+      <article class="space-y-8 prose prose-lg text-gray-700 leading-relaxed">
+        <p>
+          في <strong class="text-primary">ايجبت للدعاية والإعلان</strong>، نؤمن أن النجاح يبدأ من الإبداع 
+          وينمو مع الاستراتيجية. نحن لسنا مجرد شركة دعائية، بل شريك حقيقي لعملائنا في رحلتهم نحو التميز.
+        </p>
+
+        <p>
+          بفضل خبرتنا العميقة وفريقنا المبدع، أصبحنا من 
+          <strong class="text-primary">أفضل شركات الإعلان في جدة</strong>، حيث نجحنا في بناء سمعة 
+          قوية قائمة على الثقة والجودة والابتكار.
+        </p>
+
+        <p>
+          نحن نتميز بشكل خاص في مجال 
+          <strong class="text-primary">الدعاية والإعلان والتسويق الإلكتروني</strong>، 
+          حيث ندمج بين التقنيات الحديثة وفهمنا العميق لسلوك الجمهور 
+          لنصنع استراتيجيات مؤثرة تحقق نتائج ملموسة وتضع عملاءنا في صدارة المنافسة.
+        </p>
+
+        <h3 class="text-2xl font-bold text-gray-800">حلولنا وخدماتنا</h3>
+        <p>
+          نقدم حلولاً متكاملة تبدأ من تصميم الهوية البصرية وكتابة المحتوى الإبداعي، 
+          وصولاً إلى إدارة الحملات الإعلانية على مختلف المنصات الرقمية مثل 
+          <strong class="text-primary">فيسبوك</strong>، 
+          <strong class="text-primary">إنستجرام</strong>، 
+          و<strong class="text-primary">جوجل</strong>. 
+          هدفنا هو مساعدتك في الوصول إلى جمهورك المستهدف بأفضل الطرق وأكثرها تأثيرًا، 
+          مع تحقيق <span class="font-semibold text-primary">أعلى عائد استثماري</span> لحملاتك.
+        </p>
+
+        <p>
+          في عالم سريع التغير، نحن شريكك الذي يضمن لك التواجد القوي والفعّال، 
+          لنساعد علامتك التجارية على الظهور بمظهر يليق بها ويحقق أهدافك التسويقية.
+        </p>
+      </article>
+
+      <!-- Image Section -->
+      <div class="relative">
+        <figure class="relative rounded-3xl p-8 h-96 flex items-center justify-center shadow-lg overflow-hidden">
+          <!-- الصورة -->
+          <img 
+            src="./assets/img/ايجيبت للدعاية والاعلان 1.png" 
+            alt="فريق عمل ايجبت للإعلان والدعاية أثناء العمل على استراتيجيات تسويقية مبتكرة"
+            class="w-[98%] h-[98%] object-contain rounded-3xl p-5" 
+            loading="lazy"
+          >
+        </figure>
+
+        <!-- Floating Elements -->
+        <div class="absolute -top-4 -right-4 w-16 h-16 bg-yellow-400 rounded-full flex items-center justify-center animate-bounce" aria-hidden="true">
+          <i class="fas fa-star text-white"></i>
         </div>
-
-        <!-- Image/Visual -->
-        <div class="relative">
-          <div class="relative rounded-3xl p-8 h-96 flex items-center justify-center shadow-lg overflow-hidden">
-            <!-- الصورة كخلفية -->
-            <div class="absolute inset-0">
-              <img src="./assets/img/ايجيبت للدعاية والاعلان 1.png" alt="فريق متخصص"
-                class="w-[98%] h-[98%] object-contain rounded-3xl p-5">
-            </div>
-
-            <!-- المحتوى فوق الصورة -->
-            <div class="relative text-center text-black">
-
-            </div>
-          </div>
-
-
-
-
-          <!-- Floating Elements -->
-          <div
-            class="absolute -top-4 -right-4 w-16 h-16 bg-yellow-400 rounded-full flex items-center justify-center animate-bounce">
-            <i class="fas fa-star text-white"></i>
-          </div>
-          <div
-            class="absolute -bottom-4 -left-4 w-12 h-12 bg-pink-400 rounded-full flex items-center justify-center animate-bounce"
-            style="animation-delay: -2s;">
-            <i class="fas fa-heart text-white"></i>
-          </div>
+        <div class="absolute -bottom-4 -left-4 w-12 h-12 bg-pink-400 rounded-full flex items-center justify-center animate-bounce" style="animation-delay: -2s;" aria-hidden="true">
+          <i class="fas fa-heart text-white"></i>
         </div>
       </div>
+
     </div>
-  </section>
+  </div>
+</section>
+
 
 
 
