--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         <div class="service-card bg-white p-8 rounded-2xl fade-in">
           <!-- الصورة بدل الأيقونة -->
           <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/lettering-design.png" alt="تصميم الحروف المضيئة والبارزة"
+            <img src="./assets/img/lettering-design.webp" alt="تصميم الحروف المضيئة والبارزة"
               class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
           </div>
 
@@ -406,7 +406,7 @@
         <div class="service-card bg-white p-8 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/advertising-screen-design.png" alt="تصميم وتنفيذ الأسوار والسواتر الإعلانية"
+            <img src="./assets/img/advertising-screen-design.webp" alt="تصميم وتنفيذ الأسوار والسواتر الإعلانية"
               class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
           </div>
 
@@ -444,7 +444,7 @@
         <div class="service-card bg-white p-8 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/cladding-facade-design.png" alt="واجهات كلادينج"
+            <img src="./assets/img/cladding-facade-design.webp" alt="واجهات كلادينج"
               class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
           </div>
 
@@ -478,7 +478,7 @@
         <div class="service-card bg-white p-8 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/banner-and-flex-printing.png" alt="طباعة البنرات والفليكس"
+            <img src="./assets/img/banner-and-flex-printing.webp" alt="طباعة البنرات والفليكس"
               class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
           </div>
 
@@ -513,7 +513,7 @@
         <div class="service-card bg-white p-8 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/implementation-of-lighting.png" alt="تصميم اللوحات المضيئة"
+            <img src="./assets/img/implementation-of-lighting.webp" alt="تصميم اللوحات المضيئة"
               class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
           </div>
 
@@ -688,14 +688,14 @@
       <div class="grid grid-cols-2 gap-6">
         <div class="rounded-2xl overflow-hidden shadow-lg transform hover:scale-105 transition duration-500 mt-6 sm:mt-10">
           <img 
-            src="./assets/img/hero-1.png" 
+            src="./assets/img/hero-1.webp" 
             alt="تصميم براند إبداعي" 
             class="w-full h-full object-cover"
           >
         </div>
         <div class="rounded-2xl overflow-hidden shadow-lg transform hover:scale-105 transition duration-500">
           <img 
-            src="./assets/img/hero-2.png" 
+            src="./assets/img/hero-2.webp" 
             alt="إعلان فاخر يلفت الانتباه" 
             class="w-full h-full object-cover"
           >
@@ -780,7 +780,7 @@
         <!-- Card 1 -->
 <div class="relative overflow-hidden rounded-2xl shadow-lg transform transition-all duration-500 hover:scale-105 hover:shadow-2xl">
   <!-- الصورة -->
-  <img src="./assets/img/Logo-design.jpg" alt="تصميم لوجو"
+  <img src="./assets/img/Logo-design.webp" alt="تصميم لوجو"
     class="w-full h-64 object-cover transition-all duration-500">
 
   <!-- التعتيم ثابت -->
@@ -804,7 +804,7 @@
         <!-- Card 2 -->
         <div
           class="group relative overflow-hidden rounded-2xl shadow-lg transform transition-all duration-500 hover:scale-105 hover:shadow-2xl">
-          <img src="./assets/img/hero-1.png" alt="إعلان دعائي"
+          <img src="./assets/img/hero-1.webp" alt="إعلان دعائي"
             class="w-full h-64 object-cover transition-all duration-500 group-hover:scale-110">
           <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-500"></div>
           <div class="absolute inset-0 bg-black/0 group-hover:bg-black/20 backdrop-blur-0 group-hover:backdrop-blur-sm 
@@ -827,7 +827,7 @@
         <!-- Card 3 -->
         <div
           class="group relative overflow-hidden rounded-2xl shadow-lg transform transition-all duration-500 hover:scale-105 hover:shadow-2xl">
-          <img src="./assets/img/event-invitations.jpg" alt="دعوات مناسبة"
+          <img src="./assets/img/event-invitations.webp" alt="دعوات مناسبة"
             class="w-full h-64 object-cover transition-all duration-500 group-hover:scale-110">
           <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-500"></div>
           <div class="absolute inset-0 bg-black/0 group-hover:bg-black/20 backdrop-blur-0 group-hover:backdrop-blur-sm 
@@ -850,7 +850,7 @@
         <!-- Card 4 -->
         <div
           class="group relative overflow-hidden rounded-2xl shadow-lg transform transition-all duration-500 hover:scale-105 hover:shadow-2xl">
-          <img src="./assets/img/Leaflets-and-brochures.jpg" alt="مطويات وبروشورات"
+          <img src="./assets/img/Leaflets-and-brochures.webp" alt="مطويات وبروشورات"
             class="w-full h-64 object-cover transition-all duration-500 group-hover:scale-110">
           <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-500"></div>
           <div class="absolute inset-0 bg-black/0 group-hover:bg-black/20 backdrop-blur-0 group-hover:backdrop-blur-sm 
@@ -873,7 +873,7 @@
         <!-- Card 5 -->
         <div
           class="group relative overflow-hidden rounded-2xl shadow-lg transform transition-all duration-500 hover:scale-105 hover:shadow-2xl">
-          <img src="./assets/img/Social-media-designs.jpg" alt="تصاميم سوشيال ميديا"
+          <img src="./assets/img/Social-media-designs.webp" alt="تصاميم سوشيال ميديا"
             class="w-full h-64 object-cover transition-all duration-500 group-hover:scale-110">
           <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-500"></div>
           <div class="absolute inset-0 bg-black/0 group-hover:bg-black/20 backdrop-blur-0 group-hover:backdrop-blur-sm 
@@ -896,7 +896,7 @@
         <!-- Card 6 -->
         <div
           class="group relative overflow-hidden rounded-2xl shadow-lg transform transition-all duration-500 hover:scale-105 hover:shadow-2xl">
-          <img src="./assets/img/Posters-and-flyers.jpg" alt="بوسترات وفلاير"
+          <img src="./assets/img/Posters-and-flyers.webp" alt="بوسترات وفلاير"
             class="w-full h-64 object-cover transition-all duration-500 group-hover:scale-110">
           <div class="absolute inset-0 bg-black opacity-0 group-hover:opacity-50 transition-opacity duration-500"></div>
           <div class="absolute inset-0 bg-black/0 group-hover:bg-black/20 backdrop-blur-0 group-hover:backdrop-blur-sm 
